@@ -1,80 +1,116 @@
 #!/bin/bash
 cd `dirname $0`
 
-source ./common.sh
+# 环境参数
+inv_pre=$1
 
-#----------------- 参数提取 start -----------------#
-output_log=
-build=
-port=8080
-version='1.0.0'
+# 当前主机名
+host_name=`hostname`
 
-while getopts lbp:v: opt
-do
-    case $opt in
-        l)
-            output_log=true
-            ;;
-        b)
-            build=true
-            ;;
-        p)
-            port=$OPTARG
-            ;;
-        v)
-            version=$OPTARG
-            ;;
-        ?)
-            error "Usage: %s: [-b] [-l] [-p port] [-v version] args\n" $0
-            exit 2
-            ;;
-    esac
-done
-#----------------- 参数提取 end -----------------#
+if [ "$inv_pre" = "dev" ] && [ "$host_name" != "VM_0_5_centos" ]; then
+	echo "Illegal environment and host name!"
+	echo "当前主机名不是开发环境！请确认环境及命令。"
+	exit -1
+elif [ "$inv_pre" = "uat" ] && [ "$host_name" != "VM_0_6_centos" ]; then
+	echo "Illegal environment and host name!"
+	echo "当前主机名不是测试环境！请确认环境及命令。"
+	exit -1
+elif  `hostname|grep '^app[1234567]'  &>/dev/null` ; [ $? -ne 0 ] &&  [ "$inv_pre" = "prod" ]; then
+	echo "Illegal environment and host name!"
+	echo "当前主机名不是生产环境！请确认环境及命令。"
+	exit -1
 
-#----------------- 启动逻辑 start -----------------#
-project_name='tt-bury-point-center'
-
-proj_home=$PWD                              # the project root dir
-img_output=$project_name:v$version          # output image tag
-container_name=$project_name                  # container name
-
-h1 '准备启动应用'$project_name'（基于Docker）'
-
-if [ ! -z $build ];then
-    PROJECT_HOME=$proj_home \
-    IMAGE_NAME=$img_output \
-    APP_NAME=$project_name \
-    VERSION=$version \
-    sh build.sh
-
-    if [ $? -eq 0 ];then
-        success '镜像构建成功'
-    else
-        error '镜像构建失败'
-        exit 2
-    fi
 fi
 
-info '删除已存在的容器' && docker rm -f $container_name
+# skywalking的 ip及端口
+skywalking_addr=""
 
-info '准备启动docker容器'
+# skywalking的应用目录
+skywalking_dir=""
 
-CONTAINER_NAME=$container_name \
-PORT=$port \
-IMG_NAME=$img_output \
-sh run.sh
+# zookeeper的 ip及端口
+zookeeper_addr=""
 
-if [ $? -eq 0 ];then
-    success '容器启动成功'
+# 定时任务的 ip及端口（逗号分隔）
+elasticJob_server=""
+
+# 开发环境
+if [ "$inv_pre" = "dev" ]; then
+	skywalking_addr="10.16.0.17:11800"
+	skywalking_dir="/root/skywalking"
+	zookeeper_addr="10.0.0.17:2181"
+	elasticJob_server="10.0.0.17:2181"
+	mem=200
+# 测试环境
+elif [ "$inv_pre" = "uat" ]; then
+	skywalking_addr="10.16.0.5:11800"
+	skywalking_dir="/home/skywalking"
+	zookeeper_addr="10.0.0.5:2181"
+	elasticJob_server="10.0.0.5:2181"
+	mem=200
+# 生产环境
+elif [ "$inv_pre" = "prod" ]; then
+	skywalking_addr="10.16.0.15:11800"
+	skywalking_dir="/data/skywalking"
+	zookeeper_addr="10.16.0.9:21812?backup=10.16.0.23:21812,10.16.0.24:21812"
+	elasticJob_server="10.16.0.9:21812,10.16.0.23:21812,10.16.0.24:21812"
+	mem=400
+# 环境参数错误
 else
-    error '容器启动失败'
-    exit 3
+	echo "Illegal shell param for environment as dev, uat, or prod!"
+	echo "运行命令缺少环境参数，请补充完整，如：sh startup.sh dev"
+	exit -1
 fi
 
-if [ ! -z $output_log ];then
-    note '以下是docker容器启动输出，你可以通过ctrl-c中止它，这并不会导致容器停止'
-    docker logs -f $container_name
-fi
+img_mvn="maven:3.3.3-jdk-8"                 # docker image of maven
+m2_cache=~/.m2                              # the local maven cache dir
+proj_home=$PWD                              # the project root dir
+img_output="deepexi/tt-bury-point-center"         # output image tag
 
-#----------------- 启动逻辑 end -----------------#
+git pull  # should use git clone https://name:pwd@xxx.git
+
+echo "use docker maven"
+docker run --rm \
+   -v $m2_cache:/root/.m2 \
+   -v $proj_home:/usr/src/mymaven \
+   -w /usr/src/mymaven $img_mvn mvn clean package -U
+
+sudo mv $proj_home/tt-bury-point-center-provider/target/tt-bury-point-center-provider-*.jar $proj_home/tt-bury-point-center-provider/target/demo.jar # 兼容所有sh脚本
+docker build -t $img_output .
+
+mkdir -p $PWD/logs
+chmod 777 $PWD/logs
+
+# 删除容器
+docker rm -f tt-bury-point-center &> /dev/null
+
+version=`date "+%Y%m%d%H"`
+
+# 启动镜像
+docker run -d --restart=on-failure:5 --privileged=true \
+    --net=host \
+    --dns 114.114.114.114 \
+    --env 'TZ=Asia/Shanghai' \
+    -w /home \
+    -v /usr/share/zoneinfo/Asia/Shanghai:/etc/localtime:ro \
+    -v $PWD/logs:/home/logs \
+    -v ${skywalking_dir}/agent:/home/agent \
+    -e SW_AGENT_NAME=tt-bury-point-center \
+    -e SW_AGENT_COLLECTOR_BACKEND_SERVICES=${skywalking_addr} \
+    --name tt-bury-point-center deepexi/tt-bury-point-center \
+    java \
+        -Xmx${mem}m \
+        -Xms${mem}m \
+        -Djava.security.egd=file:/dev/./urandom \
+        -Duser.timezone=Asia/Shanghai \
+        -XX:+PrintGCDateStamps \
+        -XX:+PrintGCTimeStamps \
+        -XX:+PrintGCDetails \
+        -XX:+UseG1GC \
+        -XX:+HeapDumpOnOutOfMemoryError \
+        -Xloggc:logs/gc_$version.log \
+        -javaagent:/home/agent/skywalking-agent.jar  \
+        -jar /home/demo.jar \
+        --spring.profiles.active=${inv_pre} \
+        --dubbo.registry.address=zookeeper://${zookeeper_addr} \
+        --elasticJob.regCenter.serverList=${elasticJob_server}
